--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,17 +12,23 @@
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/actionMovieFragment"
-            app:destination="@id/movieFragment2" />
+            app:destination="@id/nav_movie"
+            app:enterAnim="@android:anim/fade_in"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popUpTo="@id/splashFragment2"
+            app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
-        android:id="@+id/movieFragment2"
+        android:id="@+id/nav_movie"
         android:name="com.example.moviedb_0706011910011.ui.main.movie.MovieFragment"
-        android:label="fragment_movie"
-        tools:layout="@layout/fragment_movie" >
+        android:label="Movies"
+        tools:layout="@layout/fragment_movie">
         <action
             android:id="@+id/actionDetailFragment"
             app:destination="@id/detailFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.example.moviedb_0706011910011.ui.main.detail.DetailFragment"
@@ -30,9 +36,25 @@
         tools:layout="@layout/fragment_detail" >
         <action
             android:id="@+id/action_detailFragment_to_movieFragment22"
-            app:destination="@id/movieFragment2" />
+            app:destination="@id/nav_movie" />
         <argument
             android:name="movie"
-            app:argType="com.example.moviedb_0706011910011.model.Movie" />
+            app:argType="com.example.moviedb_0706011910011.model.Movie"
+            app:nullable="true" />
+        <argument
+            android:name="tvShow"
+            app:argType="com.example.moviedb_0706011910011.model.TvShow"
+            app:nullable="true" />
     </fragment>
+
+    <fragment
+        android:id="@+id/nav_tv"
+        android:name="com.example.moviedb_0706011910011.ui.main.TvShow.TvShowFragment"
+        android:label="Tv Show"
+        tools:layout="@layout/fragment_tv_show">
+        <action
+            android:id="@+id/action_tvShowFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+
 </navigation>
